--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+fer
 <!Doctype html>
 <head>
 <link rel='stylesheet' type='text/css' href='./css/style.css'>
@@ -6,7 +6,7 @@
 <script async src='answers.js' type='text/javascript'></script>
 <script async src='getTrivia.js' type='text/javascript'></script>
 <script src='playerAnswer.js' type='text/javascript'></script>
-<script async src='script.js' type='text/javascript'></script>
+<script defer src='script.js' type='text/javascript'></script>
 </head>
 <body>
 <div id="trivia-container" class="trivia-container">
