--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script async src='answers.js' type='text/javascript'></script>
 <script async src='getTrivia.js' type='text/javascript'></script>
 <script src='playerAnswer.js' type='text/javascript'></script>
- <script src='script.js' type='text/javascript'></script>
+<script asyncsrc='script.js' type='text/javascript'></script>
 </head>
 <body>
 <div id="trivia-container" class="trivia-container">
