--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src='playerAnswer.js' type='text/javascript'></script>
 <script async src='script.js' type='text/javascript'></script>
 </head>
-<body>
+<body onload='displayCategories'>
 <div id="trivia-container" class="trivia-container">
  <h1>Welcome to Trivia</h1>
  <h2>Choose a category</h2>
@@ -20,10 +20,6 @@
  <div id="answers" class="answers"></div>
 </div>
 
- <script>
-  
-  displayCategories()
-  
- </script>
+
 </body>
 </html>
